--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,15 +1,51 @@
 ---
-persistent: 'no_sync'
-src_data_host: 'localhost:'
+lxd_net_name: 'lxdbr0'
+lxd_net_gateway: '10.10.10.1/24'
 preseed_template: 'templates/preseed.yml.j2'
 profile_template: 'templates/profile.yml.j2'
 mount_path: '/mnt/data/containers'
-mount_dirs:
-  - /dir1
-  - /dir2
-lxc_profile_name:
-  - {name: "container1", profile: "container1", ip: "10.10.10.10", mac: "14:08:14:08:14:08", mem: "256MiB", cpu: "1", autostart: "true", delay: "15", description: "LXD profile for container1"}
-  - {name: "container2", profile: "container2", privileged: "true", nesting: "true", ip: "10.10.10.20", mac: "24:08:24:08:24:08", mem: "512MiB", cpu: "1", autostart: "true", delay: "15", description: "LXD profile for container2"}
-lxc_container_name:
-  - {name: "container1", image: "ubuntu-minimal", version: ":jammy", profile: "container1"}
-  - {name: "container2", image: "ubuntu-minimal", version: ":jammy", profile: "container2"}
+
+lxc_containers:
+  container1:
+    name: "container1"
+    profile: "container1"
+    image: "ubuntu"
+    version: ":jammy"
+    ip: "10.10.10.10"
+    port: "2010"
+    mac: "14:08:14:08:14:08"
+    cpu: "1"
+    mem: "256MiB"
+    autostart: "true"
+    delay: "15"
+    description: "LXD profile for container1"
+    mount:
+      - name: home_user1
+        source: /dir1
+        path: /home/user1
+      - name: home_user2
+        source: /dir2
+        path: /home/user2
+
+  container2:
+    name: "container2"
+    profile: "container2"
+    image: "ubuntu-minimal"
+    version: ":jammy"
+    ip: "10.10.10.20"
+    port: "2020"
+    mac: "24:08:24:08:24:08"
+    cpu: "1"
+    mem: "512MiB"
+    privileged: "true"
+    autostart: "true"
+    nesting: "true"
+    delay: "5"
+    description: "LXD profile for container2"
+    mount:
+      - name: home_user1
+        source: /dir1
+        path: /home/user1
+      - name: home_user2
+        source: /dir2
+        path: /home/user2
